--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="about_us.html">About Us</a></li>
-                <li><a href="service-detail.html">Service <span>▼</span></a></li>
-                <li><a href="appointment.html ">Appointment</a></li>
-                <li><a href="pricing-plan.html ">Pages <span>▼</span></a></li>
+                <li><a href="about_us.html">Service <span>▼</span></a></li>
+                <li><a href="about_us.html">Appointment</a></li>
+                <li><a href="about_us.html">Pages <span>▼</span></a></li>
                 <li><a href="#">Blog <span>▼</span></a></li>
-                <li><a href="contact_us.html ">Contact Us</a></li>
+                <li><a href="about_us.html">Contact Us</a></li>
             </ul>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
