--- a/contact_us.html
+++ b/contact_us.html
@@ -17,11 +17,11 @@
                 <span>Affirm</span>
             </div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/about_us.html">About Us</a></li>
-                <li><a href="/service-detail.html ">Service <span>▼</span></a></li>
-                <li><a href="/appointment.html  ">Appointment</a></li>
-                <li><a href="/pricing-plan.html ">Pages <span>▼</span></a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_us.html">About Us</a></li>
+                <li><a href="service-detail.html">Service <span>▼</span></a></li>
+                <li><a href="appointment.html">Appointment</a></li>
+                <li><a href="pricing-plan.html">Pages <span>▼</span></a></li>
                 <li><a href="#">Blog <span>▼</span></a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
